--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,20 @@ html {
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
+  --borderRadius: 0.25rem;
+  --letterSpacing: 1px;
+  --transtion: 0.3s ease-in-out all;
+  --max-width: 1120px;
+  --fixed-width: 600px;
+
+  /* box shadow*/
+  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 body {
@@ -116,4 +130,57 @@ a {
 ul {
   list-style: none;
   padding: 0;
+}
+
+.container {
+  width: 50vw;
+  border: 5px solid var(--primary-500);
+  border-radius: var(--borderRadius);
+  max-width: var(--max-width);
+}
+
+img {
+  width: 100%;
+  /* height: 300px; */
+  /* Las imagenes tienen por defecto display inline,
+  si no seteo el block la imagen queda cortada abajo  */
+  display: block;
+
+  /* si le agrego una altura determinada a la imagen 
+  se distorciona, si seteo el cover, la imagen se expande*/
+  object-fit: cover;
+}
+
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primary-500);
+  border: transparent;
+  border-radius: var(--borderRadius);
+  letter-spacing: var(--letterSpacing);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(--transtion);
+  text-transform: capitalize;
+}
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-4);
+}
+
+.btn-hipster {
+  margin-left: 2rem;
+  color: var(--primary-500);
+  background-color: var(--primary-200);
+}
+
+.btn-hipster:hover {
+  color: var(--primary-200);
+  background-color: var(--primary-700);
+}
+
+/* Por ejemplo en un formulario cuando quiero que
+el boton use todo el ancho*/
+.btn-block {
+  width: 100%;
 }
